# python-library-cookiecutter

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  cookiecutter.json  logo.key
.githooks/: pre-commit
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEVELOP.md  LICENSE  Makefile  README.md  cspell.json  mkdocs.yml  project-words.txt  pyproject.toml  ruff-strict.toml
{{cookiecutter.project_slug}}/.claude/: settings.json
{{cookiecutter.project_slug}}/.claude/hooks/: scratch-reminder.sh
{{cookiecutter.project_slug}}/.claude/scripts/: go_on_loop.py
{{cookiecutter.project_slug}}/.claude/skills/check/: SKILL.md
{{cookiecutter.project_slug}}/.claude/skills/doc/: SKILL.md
{{cookiecutter.project_slug}}/.claude/skills/go-on/: SKILL.md
{{cookiecutter.project_slug}}/.claude/skills/interview/: SKILL.md
{{cookiecutter.project_slug}}/.claude/skills/quality/: SKILL.md
{{cookiecutter.project_slug}}/.claude/skills/staff-code-review/: SKILL.md
{{cookiecutter.project_slug}}/.claude/skills/test/: SKILL.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  cruft-update.yml
{{cookiecutter.project_slug}}/dev/: checking.md  documentation.md  go-on-loop.sh  python.md  testing.md
{{cookiecutter.project_slug}}/dev/tracker/: git-local.md  github.md  linear.md
{{cookiecutter.project_slug}}/dev/workflow/: step-1-spec.md  step-2-plan.md  step-3-task.md  step-4-ship.md  step-5-feedback.md  step-6-cleanup.md
{{cookiecutter.project_slug}}/docs/: __init__.py
{{cookiecutter.project_slug}}/docs/api/: main.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_simple.py
