#:schema https://json.schemastore.org/pyproject.json
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
[tool.uv.build-backend]
module-root = "src"