#:schema https://json.schemastore.org/pyproject.json
[build-system]
# Note: the pin in the original template might evolve over time and
# is subject to change.
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
requires-python = ">= {{ cookiecutter.python_min_version }}"
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
license = { text = "{{ cookiecutter.project_license }}" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    {% if cookiecutter.project_license == "MIT License" -%}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.project_license == "GNU General Public License v3" -%}
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    {% elif cookiecutter.project_license == "BSD license" -%}
    "License :: OSI Approved :: BSD License",
    {% elif cookiecutter.project_license == "ISC license" -%}
    "License :: OSI Approved :: ISC License",
    {% elif cookiecutter.project_license == "Apache Software License 2.0" -%}
    "License :: OSI Approved :: Apache Software License",
    {% endif %}
]
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
dependencies = [
  # Add your dependencies here
]
[dependency-groups]
dev = [
  "python-dotenv",
  # testing
  "coverage",
  "pytest",
  # linting
  "mypy",
  "basedpyright",
  "ruff",
  # documentation
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mdx-truly-sane-lists",
  # for vscode
  "ipykernel",
  # CI/CD
  "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

[tool.uv.build-backend]
module-root = "src"


[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Irrelevant rules
  "PD", # We don't need to worry about pandas
  # Conflicting rules identified by Ruff
  # https://docs.astral.sh/ruff/formatter/#format-suppression
  "COM812",
  "ISC001",
  # We prefer docstrings that are not in the first line
  "D212",
  # and we want docstrings right under the class definition
  "D203",
  # We allow for f-strings in logger, because doing it otherwise
  # would be way too verbose
  "G004",
  # We allow the use of TODOs (under some formats)
  "FIX002",
]

# For manual overrides
[tool.ruff.lint.per-file-ignores]
# We don't want to check our docstrings in test
# We also don't want asserts to be an issue
# Also, it's fine to call private members in testing
'tests/*' = ['D', 'S101', 'SLF001']
# In general, scratch code can be laxer, including with docstrings, types
# print statements, and commented-out code
'scratch/*' = ['T201', 'D100', 'D101', 'D102', "ERA001"]

[tool.ruff.lint.pydocstyle]
# I personally prefer numpy, but as of May 2024, Ruff
# only supports google in their pydocstyle configuration
convention = "google"

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

# Useful for removing warnings from third-party libraries
# # datasets doesn't have type hints and is not maintained
# [[tool.mypy.overrides]]
# module = "datasets.*"
# ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
# This setting ("all") is only available with 
# basedpyright; otherwise, choose strict
typeCheckingMode = "all"

[tool.coverage.run]
# Measurement of contexts
dynamic_context = "test_function"

[tool.coverage.report]
exclude_also = [
  "pragma: no cover",
  "@overload",
  "if .*TYPE_CHECKING",
  "if typing.TYPE_CHECKING",
  "if __name__ == .__main__.",
]
